开放静态资源

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,4 +1,7 @@
 spring:
+#  直接访问static目录
+  mvc:
+    static-path-pattern: /static/**
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3307/ice-cms?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8
@@ -26,6 +29,10 @@ spring:
     # 自动跑脚本
     enabled: false
     change-log: classpath:/liquibase/master.xml
+  servlet:
+    multipart:
+      max-file-size: 4GB
+      max-request-size: 4GB
 
 logging:
   level:
