1、完成树组件显示与请求 2、添加Event Bus

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -36,8 +36,7 @@ spring:
 
 logging:
   level:
-    root: debug
-    com.shih: debug
+    com.shih: info
 #  file:
 #    path: e:/wwwroot/log1  #日志保存路径
 minio:
