--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.shih</groupId>
 	<artifactId>ice-dms</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>ICE DMS</name>
 	<description>ICE DMS</description>
 	<properties>
