经检查 大文件上传失败的原因是nginx转发时存在超时设置，需要人工覆盖默认值

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -33,6 +33,7 @@ spring:
     multipart:
       max-file-size: 4GB
       max-request-size: 4GB
+      file-size-threshold: 500MB
 server:
   port: 8080
 logging:
